Fix overflow

--- a/client/src/components/SavedNotes/Note.css
+++ b/client/src/components/SavedNotes/Note.css
@@ -18,6 +18,11 @@
   flex-direction: column;
   justify-content: center;
   background-color: rgba(78, 204, 163, 0.4);
+  overflow-wrap: break-word;
+}
+
+.note-title {
+  overflow-wrap: break-word;
 }
 
 .content-para {
@@ -34,10 +39,13 @@
   font-size: 80%;
   margin: 20px 2px;
   padding: 15px 30px;
+  overflow-wrap: break-word;
+  max-width: 80%;
 }
 
 .tags-div {
   position: relative;
+  overflow-wrap: break-word;
 }
 
 .watch-again-btn {
